Fix footer overlap

--- a/assets/scss/modules/_deviser_videos.scss
+++ b/assets/scss/modules/_deviser_videos.scss
@@ -141,6 +141,7 @@
 .empty-wrapper{
     padding: 40px 0;
     text-align: center;
+	min-height: 560px;
 }
 .tag-select-row{
     padding: 20px;
